--- a/css/styles.css
+++ b/css/styles.css
@@ -80,18 +80,6 @@ input {
 
 .header select {
     margin: 10px;
-    float:right;
-}
-
-.header-button {
-    margin: 5px;
-    padding: 5px 5px;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    line-height: 1em;
-}
-
-.header-button-left {
-    left: 4;
 }
 
 .search-bar {
@@ -184,30 +172,27 @@ li>a * {
 }
 
 .button {
-	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	box-shadow:inset 0px 1px 0px 0px #ffffff;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
-	background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
-	background-color:#ededed;
-	-moz-border-radius:2px;
-	-webkit-border-radius:2px;
-	border-radius:2px;
-	border:1px solid #dcdcdc;
-	display:inline-block;
-	color:#666666;
-	font-size:14px;
-	text-decoration:none;
-	text-shadow:1px 1px 0px #ffffff;
+    padding: 3px 6px;
+    margin:2px 2px 2px 2px;
+    font-size:18px;
+    line-height:18px;
+    color:white;
+}
+.button-border {
+    border-radius:4px;
+    border:1px solid white;
+}
+.button-first {
+    margin:2px 2px 2px 8px;
 }
 
-.button:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
-	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
-	background-color:#dfdfdf;
+.right {
+   float:right;
+}
 
+.button-border:hover {
+   background-color:white;
+   color:#251b3e;
 }
 
 h1 {
@@ -272,7 +257,27 @@ li>a.tappable-active {
 }
 
 h1, select#pid {
-max-width:49%;
+max-width:40%;
+}
+
+label {
+  display:block; float:left;
+  width:100px;
+}
+
+#login-form {
+    max-width:350px;
+    margin: 30px auto;
+}
+
+#login-form legend {
+  font-size:0.8em;
+}
+
+#login-form .button {
+  background-color:#033653;
+  border-radius:4px;
+  font-size:100%;
 }
 
 div.record .text, .result-list .text { color:#251b3e;}
