--- a/css/styles.css
+++ b/css/styles.css
@@ -281,7 +281,7 @@ label {
 }
 
 div.record .text, .result-list .text { color:#251b3e;}
-div.record .details, .result-list .details { font-family:FiraSansLight;font-size:0.8em; white-space:pre-wrap; color:#033653; }
+div.record .details, .result-list .details { font-family:FiraSansRegular;font-size:0.8em; white-space:pre-wrap; color:#0b677c; }
 div.record table.fields { width:100%; margin:0px; }
 div.record table.fields td { width:50%; vertical-align:top;}
 div.record div.field { padding:2px; background-color:#bfd2d7; clear:left; margin:2px 0px;border-radius:3px; }
