- Store currently selected project

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ label {
 }
 
 #login-form .button {
-  background-color:#033653;
+  background-color:#0b677c;
   border-radius:4px;
   font-size:100%;
 }
