--- a/css/styles.css
+++ b/css/styles.css
@@ -39,8 +39,8 @@ input {
     background: #666;
     background-image:url('../img/eks_pattern.jpg');
     background-size:cover;
-    height: 64px;
-    line-height: 85px;
+    height: 44px;
+    line-height: 44px;
     width: 100%;
     color: #fff;
     -webkit-user-select: none;
@@ -53,7 +53,7 @@ input {
     font-family:FiraSansMedium;
     font-weight:normal;
     font-size: 20px;
-    margin: 0 0 0 10px;
+    margin: 0 0 0 5px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -76,7 +76,9 @@ input {
 }
 
 .header select {
-    margin: 30px 10px 10px 80px;
+    position:relative;
+    top:10px;
+    right:10px;
 }
 
 .search-bar {
@@ -216,7 +218,7 @@ h2 {
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     position: absolute;
-    top: 104px;
+    top: 84px;
     bottom: 0px;
     left: 0px;
     right: 0px;
