--- a/templates/result-li-tpl.hbs
+++ b/templates/result-li-tpl.hbs
@@ -1,5 +1,4 @@
-    {{#.}}
-    <li><a href="#results/{{this.id}}"><div class="project">{{this.project}}</div><div class="breadcrumb">{{{this.bc}}}</div><div class="text">{{this.text}}</div><div class="details">{{ellipsis this.details 200 "&hellip;"}}</div></a>
-<a class="action_button" href="#edit/{{this.id}}"><i class="fi-pencil large"></i></a>
+    {{#each items}}
+    <li><a class="action_button" href="#edit/{{this.Issue.id}}"><i class="fi-pencil large"></i></a><a class="result-entry" href="#results/{{this.Issue.id}}"><div class="project">{{this.Project.name}}</div><div class="breadcrumb">{{{this.Issue.bc}}}</div><div class="text">{{this.Issue.text}}</div><div class="details">{{ellipsis this.Issue.details 200 "&hellip;"}}</div></a>
 </li>
-    {{/.}}
+    {{/each}}
